--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ path = "src/main.rs"
 [dependencies]
 cpal = "0.15"
 device_query = "2.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
