--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ cpal = "0.15"
 device_query = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+clap = { version = "4.4", features = ["derive"] }
