--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ device_query = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.4", features = ["derive"] }
+hound = "3.5"
