--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 description = "CodeBeats - Programming-optimized keyboard music simulator with real-time audio synthesis"
 authors = ["jgy"]
-license = "MIT OR Apache-2.0"
+license = "GPL-3.0"
 readme = "README.md"
 keywords = [
     "audio",
@@ -25,9 +25,6 @@ path = "src/lib.rs"
 name = "codebeats"
 path = "src/main.rs"
 
-[[bin]]
-name = "codebeats-gui"
-path = "src/gui_main.rs"
 
 [dependencies]
 cpal = "0.15"
@@ -35,9 +32,9 @@ device_query = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.4", features = ["derive"] }
+once_cell = "1.19"
 hound = "3.5"
-eframe = "0.24"
-egui = "0.24"
+
 tokio = { version = "1.0", features = ["process"] }
 env_logger = "0.10"
 log = "0.4"
